examples/errors/ltol-in-expr.rcp
channels: chan
guard g(p : int) := p == (F 3) U false;
guard g2() := true;

agent Agent
    local: counter : int
    init: counter == 0 U counter == 1

    repeat: (
                {counter == G 0} chan! true () [counter := 1 U true];
                {F counter == 1} chan! true () [counter := X 0]
            )

system = Agent(one, true) || Agent(two, true) || Agent(three, true)

SPEC F true;

// This example should trigger the following errors:
//  LTOL not allowed here [Ln 2, Col 21]
//  LTOL not allowed here [Ln 2, Col 27]
//  LTOL not allowed here [Ln 7, Col 11]
//  LTOL not allowed here [Ln 10, Col 29]
//  LTOL not allowed here [Ln 10, Col 60]
//  LTOL not allowed here [Ln 11, Col 18]
//  LTOL not allowed here [Ln 11, Col 60]
